overflow fixes

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ body {
   align-items: center;
   flex-direction: column;
   overflow-x: hidden;
+  row-gap: 1.6rem;
 }
 
 header {
@@ -33,6 +34,7 @@ main {
   height: fit-content;
   row-gap: 1.6rem;
   overflow-x: hidden;
+  padding: 1rem 1.5rem;
 }
 
 h1 {
@@ -46,6 +48,11 @@ h2 * {
   font-weight: 500;
 }
 
+h3 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
 p {
   font-size: 1.6rem;
   font-weight: 400;
@@ -54,6 +61,12 @@ p {
 
 ul {
   list-style: none;
+}
+
+section {
+  box-shadow: 0 0 10px -5px #FFF;
+  border-radius: 1rem;
+  padding: 0.5rem;
 }
 
 nav {
@@ -160,7 +173,7 @@ figcaption * a:hover {
     display: flex !important;
     flex-direction: column;
     flex: unset !important;
-    right: -100%;
+    right: 100%;
     top: 5rem;
     background: #060606;
   }
@@ -207,19 +220,25 @@ section.skills ul li {
   overflow-x: scroll;
   overflow-y: hidden;
   display: flex;
-  column-gap: 0.25rem;
+  column-gap: 1rem;
   position: relative;
   box-shadow: 0 0 9px 1px #9d9d9d;
   margin: 0 auto;
 }
 
 .slider-item {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 400px;
   flex-shrink: 0;
   justify-content: center;
-  border: 1px solid red;
   display: flex;
+}
+.slider-item h3,
+.slider-item p {
+  text-align: center;
+  color: #F0F0F0;
 }
 .slider-item img {
   height: 100%;
