--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -23,6 +23,8 @@ body {
   align-items: center;
   flex-direction: column;
   overflow-x: hidden;
+  row-gap: 1.6rem;
+
 }
 
 header {
@@ -36,6 +38,7 @@ main {
   height: fit-content;
   row-gap: 1.6rem;
   overflow-x: hidden;
+  padding: 1rem 1.5rem;
 }
 
 h1 {
@@ -49,6 +52,11 @@ h2 * {
   font-weight: 500;
 }
 
+h3 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
 p {
   font-size: 1.6rem;
   font-weight: 400;
@@ -57,4 +65,10 @@ p {
 
 ul {
   list-style: none;
+}
+
+section {
+  box-shadow: 0 0 10px -5px #FFF;
+  border-radius: 1rem;
+  padding: .5rem;
 }
