--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,3 +1,5 @@
+@use './navbar' as navbar;
+
 .portfolio {
   width: 100%;
   padding-bottom: 3rem;
@@ -8,19 +10,26 @@
   overflow-x: scroll;
   overflow-y: hidden;
   display: flex;
-  column-gap: .25rem;
+  column-gap: 1rem;
   position: relative;
   box-shadow: 0 0 9px 1px #9d9d9d;
   margin: 0 auto;
 }
 
 .slider-item {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 400px;
   flex-shrink: 0;
   justify-content: center;
-  border: 1px solid red;
   display: flex;
+
+  & h3,
+  p {
+    text-align: center;
+    color: navbar.$color-text;
+  }
 
   & img {
     height: 100%;
