--- a/scss/_rwd.scss
+++ b/scss/_rwd.scss
@@ -13,7 +13,7 @@ $width-lg: 1200px;
     display: flex !important;
     flex-direction: column;
     flex: unset !important;
-    right: -100%;
+    right: 100%;
     top: navbar.$navbar-height;
     background: navbar.$color-nav-bg;
   }
